Micky: Fixed TeamScope z-index issue

--- a/web/src/Pages/CreateTeamPage/CreateTeamPage.module.css
+++ b/web/src/Pages/CreateTeamPage/CreateTeamPage.module.css
@@ -14,7 +14,7 @@
   position: absolute;
   top: 45%;
   left: 0;
-  z-index: 1;
+  z-index: -1;
 }
 
 .heroDiv {
